# CrewAI

Crewtest/cybercrew/: report.md
Crewtest/cybercrew/results/: 14_report.md
Crewtest/cybercrew/src/cybercrew/: crew.py  main.py
Crewtest/cybercrew/src/cybercrew/config/: agents.yaml  tasks.yaml
Crewtest/cybercrew/src/cybercrew/tools/: custom_tool.py
cybercrew/: README.md  pyproject.toml
cybercrew/cybercrew/: README.md  pyproject.toml  report.md
cybercrew/cybercrew/src/cybercrew/: crew.py  main.py
cybercrew/cybercrew/src/cybercrew/config/: agents.yaml  tasks.yaml
cybercrew/src/cybercrew/: crew.py
