[project]
name = "cybercrew"
version = "0.1.0"
description = "cybercrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
cybercrew = "cybercrew.main:run"
run_crew = "cybercrew.main:run"
train = "cybercrew.main:train"
replay = "cybercrew.main:replay"
test = "cybercrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
